# Audar-ASR-V1

./: .gitignore  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  __init__.py  audar_asr.py  audar_asr_3b_infer.py  audar_asr_3b_mlx.py  audar_asr_api.py  audar_asr_benchmark.py  audar_asr_toolkit.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
audar_asr/: __init__.py  cli.py
audar_asr/core/: __init__.py  config.py  engine.py  microphone.py  transcription.py
audar_asr/utils/: __init__.py  audio.py  streaming.py
examples/: basic_transcription.py  batch_processing.py  microphone_streaming.py
tests/: test_audar_asr.py
